@@ -9,6 +9,9 @@ ChangeLog for RQL
 
     * #71131: as_string doesn't  propagate encoding/kwargs to subqueries
 
+    * #71132: column alias scope should be handled as variable scope, not bound
+      to subquery
+
     * Select.replace must properly reset old node's parent attribute
 
     * new undo_modification context manager on select nodes
